@@ -2,7 +2,7 @@
 
 ReadLineBuf &ReadLineBuf::instance()
 {
-    if (s_readLineBuf == 0)
+    if (s_readLineBuf.get() == 0)
         throw logic_error("ReadLineBuf not yet initialized");
 
     return *s_readLineBuf;
