@@ -1,3 +1,9 @@
+bobcat (2.09.02)
+
+  * No 'virtual ~Mbuf() = default': destructor removed from Mbuf.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 04 Nov 2010 12:45:40 +0100
+
 bobcat (2.09.01)
 
   * Mstream::id() now returns a long, rather than an int. See
